src/y.output
Terminals unused in grammar

    BASE
    IS
    AS
    NOT


State 8 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 26 conflicts: 1 reduce/reduce
State 27 conflicts: 1 reduce/reduce
State 32 conflicts: 1 reduce/reduce
State 45 conflicts: 1 reduce/reduce
State 71 conflicts: 17 shift/reduce
State 86 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 108 conflicts: 17 shift/reduce
State 120 conflicts: 1 reduce/reduce
State 127 conflicts: 19 shift/reduce
State 128 conflicts: 17 shift/reduce
State 139 conflicts: 17 shift/reduce
State 156 conflicts: 17 shift/reduce
State 171 conflicts: 1 shift/reduce
State 180 conflicts: 19 shift/reduce
State 190 conflicts: 17 shift/reduce


Grammar

    0 $accept: program $end

    1 program: input

    2 input: ε
    3      | input statement
    4      | input error

    5 statement: SEMICOLON
    6          | decl_function
    7          | conditional
    8          | while
    9          | decl_function SEMICOLON
   10          | block_expr
   11          | decl_tpye
   12          | expr SEMICOLON

   13 expr: NUMBER
   14     | STRING
   15     | BOOLEAN
   16     | let_in_expr
   17     | call_function
   18     | block_expr
   19     | ID
   20     | expr CONCAT expr
   21     | expr DCONCAT expr
   22     | expr GE expr
   23     | expr EQ expr
   24     | expr GT expr
   25     | expr LE expr
   26     | expr LT expr
   27     | expr AND expr
   28     | expr OR expr
   29     | expr NEQUALS expr
   30     | expr PLUS expr
   31     | expr MINUS expr
   32     | expr MULT expr
   33     | expr DIVIDE expr
   34     | expr MOD expr
   35     | expr POWER expr
   36     | LPAREN expr RPAREN
   37     | destructive_var_decl
   38     | conditional
   39     | while
   40     | member_invocation
   41     | PI
   42     | E
   43     | member_assignment
   44     | type_instance
   45     | ERROR

   46 let_in_expr: LET assignments IN expr

   47 assignments: var
   48            | var COMMA assignments

   49 var: ID COLON ID EQUALS expr
   50    | ID EQUALS expr

   51 call_function: ID LPAREN args RPAREN

   52 args: expr
   53     | expr COMMA args_not_empty
   54     | ε

   55 args_not_empty: expr
   56               | expr COMMA args_not_empty

   57 decl_function: FUNCTION ID LPAREN list_params RPAREN ARROW expr SEMICOLON
   58              | FUNCTION ID LPAREN list_params RPAREN block_expr
   59              | FUNCTION ID LPAREN list_params RPAREN COLON ID ARROW expr SEMICOLON
   60              | FUNCTION ID LPAREN list_params RPAREN COLON ID block_expr

   61 list_params: param
   62            | param COMMA list_params_not_empty
   63            | ε

   64 param: ID
   65      | ID COLON ID

   66 list_params_not_empty: param
   67                      | param COMMA list_params_not_empty

   68 conditional: IF LPAREN expr RPAREN expr
   69            | IF LPAREN expr RPAREN expr elif_part
   70            | IF LPAREN expr RPAREN expr ELSE expr

   71 elif_part: ELIF LPAREN expr RPAREN expr
   72          | ELIF LPAREN expr RPAREN expr ELSE expr
   73          | ELIF LPAREN expr RPAREN expr elif_part

   74 while: WHILE LPAREN expr RPAREN expr

   75 decl_tpye: TYPE ID LPAREN list_params RPAREN LBRACKET type_body RBRACKET
   76          | TYPE ID LBRACKET type_body RBRACKET
   77          | TYPE ID INHERITS ID LBRACKET type_body RBRACKET
   78          | TYPE ID LPAREN list_params RPAREN INHERITS ID RPAREN args LPAREN LBRACKET type_body RBRACKET

   79 type_body: type_expr
   80          | type_expr type_body
   81          | ε

   82 type_expr: var SEMICOLON
   83          | type_member

   84 type_member: ID LPAREN list_params RPAREN ARROW expr SEMICOLON
   85            | ID LPAREN list_params RPAREN COLON ID ARROW expr SEMICOLON
   86            | ID LPAREN list_params RPAREN block_expr
   87            | ID LPAREN list_params RPAREN COLON ID block_expr

   88 member_invocation: expr DOT ID
   89                  | expr DOT call_function

   90 member_assignment: expr DOT ID DESTRUCTOR expr

   91 destructive_var_decl: ID DESTRUCTOR expr

   92 block_expr: LBRACKET block_expr_list RBRACKET

   93 type_instance: NEW ID LPAREN args RPAREN

   94 block_expr_list: statement
   95                | statement block_expr_list
   96                | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4
    NUMBER <val> (258) 13
    PI <val> (259) 41
    E <val> (260) 42
    ID <var> (261) 19 49 50 51 57 58 59 60 64 65 75 76 77 78 84 85 86 87 88 90 91 93
    STRING <str> (262) 14
    BOOLEAN <str> (263) 15
    ERROR (264) 45
    LET (265) 46
    IN (266) 46
    IF (267) 68 69 70
    ELSE (268) 70 72
    ELIF (269) 71 72 73
    WHILE (270) 74
    LPAREN (271) 36 51 57 58 59 60 68 69 70 71 72 73 74 75 78 84 85 86 87 93
    RPAREN (272) 36 51 57 58 59 60 68 69 70 71 72 73 74 75 78 84 85 86 87 93
    SEMICOLON (273) 5 9 12 57 59 82 84 85
    COMMA (274) 48 53 56 62 67
    LBRACKET (275) 75 76 77 78 92
    RBRACKET (276) 75 76 77 78 92
    COLON (277) 49 59 60 65 85 87
    EQUALS (278) 49 50
    DESTRUCTOR (279) 90 91
    NEW (280) 93
    BASE (281)
    FUNCTION (282) 57 58 59 60
    DOT (283) 88 89 90
    TYPE (284) 75 76 77 78
    INHERITS (285) 77 78
    ARROW (286) 57 59 84 85
    IS (287)
    AS (288)
    DCONCAT (289) 21
    CONCAT (290) 20
    AND (291) 27
    OR (292) 28
    NOT (293)
    NEQUALS (294) 29
    GE (295) 22
    GT (296) 24
    LE (297) 25
    LT (298) 26
    EQ (299) 23
    PLUS (300) 30
    MINUS (301) 31
    MULT (302) 32
    DIVIDE (303) 33
    MOD (304) 34
    POWER (305) 35


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    input (53)
        on left: 2 3 4
        on right: 1 3 4
    statement <node> (54)
        on left: 5 6 7 8 9 10 11 12
        on right: 3 94 95
    expr <node> (55)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 12 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 46 49 50 52 53 55 56 57 59 68 69 70 71 72 73 74 84 85 88 89 90 91
    let_in_expr <node> (56)
        on left: 46
        on right: 16
    assignments <arg_list> (57)
        on left: 47 48
        on right: 46 48
    var <node> (58)
        on left: 49 50
        on right: 47 48 82
    call_function <node> (59)
        on left: 51
        on right: 17 89
    args <arg_list> (60)
        on left: 52 53 54
        on right: 51 78 93
    args_not_empty <arg_list> (61)
        on left: 55 56
        on right: 53 56
    decl_function <node> (62)
        on left: 57 58 59 60
        on right: 6 9
    list_params <arg_list> (63)
        on left: 61 62 63
        on right: 57 58 59 60 75 78 84 85 86 87
    param <arg_list> (64)
        on left: 64 65
        on right: 61 62 66 67
    list_params_not_empty <arg_list> (65)
        on left: 66 67
        on right: 62 67
    conditional <node> (66)
        on left: 68 69 70
        on right: 7 38
    elif_part <node> (67)
        on left: 71 72 73
        on right: 69 73
    while <node> (68)
        on left: 74
        on right: 8 39
    decl_tpye <node> (69)
        on left: 75 76 77 78
        on right: 11
    type_body <arg_list> (70)
        on left: 79 80 81
        on right: 75 76 77 78 80
    type_expr <node> (71)
        on left: 82 83
        on right: 79 80
    type_member <node> (72)
        on left: 84 85 86 87
        on right: 83
    member_invocation <node> (73)
        on left: 88 89
        on right: 40
    member_assignment <node> (74)
        on left: 90
        on right: 43
    destructive_var_decl <node> (75)
        on left: 91
        on right: 37
    block_expr <node> (76)
        on left: 92
        on right: 10 18 58 60 86 87
    type_instance <node> (77)
        on left: 93
        on right: 44
    block_expr_list <arg_list> (78)
        on left: 94 95 96
        on right: 92 95


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (input)

    program  go to state 1
    input    go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: input •
    3 input: input • statement
    4      | input • error

    error      shift, and go to state 4
    NUMBER     shift, and go to state 5
    PI         shift, and go to state 6
    E          shift, and go to state 7
    ID         shift, and go to state 8
    STRING     shift, and go to state 9
    BOOLEAN    shift, and go to state 10
    ERROR      shift, and go to state 11
    LET        shift, and go to state 12
    IF         shift, and go to state 13
    WHILE      shift, and go to state 14
    LPAREN     shift, and go to state 15
    SEMICOLON  shift, and go to state 16
    LBRACKET   shift, and go to state 17
    NEW        shift, and go to state 18
    FUNCTION   shift, and go to state 19
    TYPE       shift, and go to state 20

    $end  reduce using rule 1 (program)

    statement             go to state 21
    expr                  go to state 22
    let_in_expr           go to state 23
    call_function         go to state 24
    decl_function         go to state 25
    conditional           go to state 26
    while                 go to state 27
    decl_tpye             go to state 28
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 32
    type_instance         go to state 33


State 3

    0 $accept: program $end •

    $default  accept


State 4

    4 input: input error •

    $default  reduce using rule 4 (input)


State 5

   13 expr: NUMBER •

    $default  reduce using rule 13 (expr)


State 6

   41 expr: PI •

    $default  reduce using rule 41 (expr)


State 7

   42 expr: E •

    $default  reduce using rule 42 (expr)


State 8

   19 expr: ID •
   51 call_function: ID • LPAREN args RPAREN
   91 destructive_var_decl: ID • DESTRUCTOR expr

    LPAREN      shift, and go to state 34
    DESTRUCTOR  shift, and go to state 35

    LPAREN    [reduce using rule 19 (expr)]
    $default  reduce using rule 19 (expr)


State 9

   14 expr: STRING •

    $default  reduce using rule 14 (expr)


State 10

   15 expr: BOOLEAN •

    $default  reduce using rule 15 (expr)


State 11

   45 expr: ERROR •

    $default  reduce using rule 45 (expr)


State 12

   46 let_in_expr: LET • assignments IN expr

    ID  shift, and go to state 36

    assignments  go to state 37
    var          go to state 38


State 13

   68 conditional: IF • LPAREN expr RPAREN expr
   69            | IF • LPAREN expr RPAREN expr elif_part
   70            | IF • LPAREN expr RPAREN expr ELSE expr

    LPAREN  shift, and go to state 39


State 14

   74 while: WHILE • LPAREN expr RPAREN expr

    LPAREN  shift, and go to state 40


State 15

   36 expr: LPAREN • expr RPAREN

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 41
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 16

    5 statement: SEMICOLON •

    $default  reduce using rule 5 (statement)


State 17

   92 block_expr: LBRACKET • block_expr_list RBRACKET

    NUMBER     shift, and go to state 5
    PI         shift, and go to state 6
    E          shift, and go to state 7
    ID         shift, and go to state 8
    STRING     shift, and go to state 9
    BOOLEAN    shift, and go to state 10
    ERROR      shift, and go to state 11
    LET        shift, and go to state 12
    IF         shift, and go to state 13
    WHILE      shift, and go to state 14
    LPAREN     shift, and go to state 15
    SEMICOLON  shift, and go to state 16
    LBRACKET   shift, and go to state 17
    NEW        shift, and go to state 18
    FUNCTION   shift, and go to state 19
    TYPE       shift, and go to state 20

    $default  reduce using rule 96 (block_expr_list)

    statement             go to state 45
    expr                  go to state 22
    let_in_expr           go to state 23
    call_function         go to state 24
    decl_function         go to state 25
    conditional           go to state 26
    while                 go to state 27
    decl_tpye             go to state 28
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 32
    type_instance         go to state 33
    block_expr_list       go to state 46


State 18

   93 type_instance: NEW • ID LPAREN args RPAREN

    ID  shift, and go to state 47


State 19

   57 decl_function: FUNCTION • ID LPAREN list_params RPAREN ARROW expr SEMICOLON
   58              | FUNCTION • ID LPAREN list_params RPAREN block_expr
   59              | FUNCTION • ID LPAREN list_params RPAREN COLON ID ARROW expr SEMICOLON
   60              | FUNCTION • ID LPAREN list_params RPAREN COLON ID block_expr

    ID  shift, and go to state 48


State 20

   75 decl_tpye: TYPE • ID LPAREN list_params RPAREN LBRACKET type_body RBRACKET
   76          | TYPE • ID LBRACKET type_body RBRACKET
   77          | TYPE • ID INHERITS ID LBRACKET type_body RBRACKET
   78          | TYPE • ID LPAREN list_params RPAREN INHERITS ID RPAREN args LPAREN LBRACKET type_body RBRACKET

    ID  shift, and go to state 49


State 21

    3 input: input statement •

    $default  reduce using rule 3 (input)


State 22

   12 statement: expr • SEMICOLON
   20 expr: expr • CONCAT expr
   21     | expr • DCONCAT expr
   22     | expr • GE expr
   23     | expr • EQ expr
   24     | expr • GT expr
   25     | expr • LE expr
   26     | expr • LT expr
   27     | expr • AND expr
   28     | expr • OR expr
   29     | expr • NEQUALS expr
   30     | expr • PLUS expr
   31     | expr • MINUS expr
   32     | expr • MULT expr
   33     | expr • DIVIDE expr
   34     | expr • MOD expr
   35     | expr • POWER expr
   88 member_invocation: expr • DOT ID
   89                  | expr • DOT call_function
   90 member_assignment: expr • DOT ID DESTRUCTOR expr

    SEMICOLON  shift, and go to state 50
    DOT        shift, and go to state 51
    DCONCAT    shift, and go to state 52
    CONCAT     shift, and go to state 53
    AND        shift, and go to state 54
    OR         shift, and go to state 55
    NEQUALS    shift, and go to state 56
    GE         shift, and go to state 57
    GT         shift, and go to state 58
    LE         shift, and go to state 59
    LT         shift, and go to state 60
    EQ         shift, and go to state 61
    PLUS       shift, and go to state 62
    MINUS      shift, and go to state 63
    MULT       shift, and go to state 64
    DIVIDE     shift, and go to state 65
    MOD        shift, and go to state 66
    POWER      shift, and go to state 67


State 23

   16 expr: let_in_expr •

    $default  reduce using rule 16 (expr)


State 24

   17 expr: call_function •

    $default  reduce using rule 17 (expr)


State 25

    6 statement: decl_function •
    9          | decl_function • SEMICOLON

    SEMICOLON  shift, and go to state 68

    SEMICOLON  [reduce using rule 6 (statement)]
    $default   reduce using rule 6 (statement)


State 26

    7 statement: conditional •
   38 expr: conditional •

    SEMICOLON  reduce using rule 7 (statement)
    SEMICOLON  [reduce using rule 38 (expr)]
    DOT        reduce using rule 38 (expr)
    DCONCAT    reduce using rule 38 (expr)
    CONCAT     reduce using rule 38 (expr)
    AND        reduce using rule 38 (expr)
    OR         reduce using rule 38 (expr)
    NEQUALS    reduce using rule 38 (expr)
    GE         reduce using rule 38 (expr)
    GT         reduce using rule 38 (expr)
    LE         reduce using rule 38 (expr)
    LT         reduce using rule 38 (expr)
    EQ         reduce using rule 38 (expr)
    PLUS       reduce using rule 38 (expr)
    MINUS      reduce using rule 38 (expr)
    MULT       reduce using rule 38 (expr)
    DIVIDE     reduce using rule 38 (expr)
    MOD        reduce using rule 38 (expr)
    POWER      reduce using rule 38 (expr)
    $default   reduce using rule 7 (statement)


State 27

    8 statement: while •
   39 expr: while •

    SEMICOLON  reduce using rule 8 (statement)
    SEMICOLON  [reduce using rule 39 (expr)]
    DOT        reduce using rule 39 (expr)
    DCONCAT    reduce using rule 39 (expr)
    CONCAT     reduce using rule 39 (expr)
    AND        reduce using rule 39 (expr)
    OR         reduce using rule 39 (expr)
    NEQUALS    reduce using rule 39 (expr)
    GE         reduce using rule 39 (expr)
    GT         reduce using rule 39 (expr)
    LE         reduce using rule 39 (expr)
    LT         reduce using rule 39 (expr)
    EQ         reduce using rule 39 (expr)
    PLUS       reduce using rule 39 (expr)
    MINUS      reduce using rule 39 (expr)
    MULT       reduce using rule 39 (expr)
    DIVIDE     reduce using rule 39 (expr)
    MOD        reduce using rule 39 (expr)
    POWER      reduce using rule 39 (expr)
    $default   reduce using rule 8 (statement)


State 28

   11 statement: decl_tpye •

    $default  reduce using rule 11 (statement)


State 29

   40 expr: member_invocation •

    $default  reduce using rule 40 (expr)


State 30

   43 expr: member_assignment •

    $default  reduce using rule 43 (expr)


State 31

   37 expr: destructive_var_decl •

    $default  reduce using rule 37 (expr)


State 32

   10 statement: block_expr •
   18 expr: block_expr •

    SEMICOLON  reduce using rule 10 (statement)
    SEMICOLON  [reduce using rule 18 (expr)]
    DOT        reduce using rule 18 (expr)
    DCONCAT    reduce using rule 18 (expr)
    CONCAT     reduce using rule 18 (expr)
    AND        reduce using rule 18 (expr)
    OR         reduce using rule 18 (expr)
    NEQUALS    reduce using rule 18 (expr)
    GE         reduce using rule 18 (expr)
    GT         reduce using rule 18 (expr)
    LE         reduce using rule 18 (expr)
    LT         reduce using rule 18 (expr)
    EQ         reduce using rule 18 (expr)
    PLUS       reduce using rule 18 (expr)
    MINUS      reduce using rule 18 (expr)
    MULT       reduce using rule 18 (expr)
    DIVIDE     reduce using rule 18 (expr)
    MOD        reduce using rule 18 (expr)
    POWER      reduce using rule 18 (expr)
    $default   reduce using rule 10 (statement)


State 33

   44 expr: type_instance •

    $default  reduce using rule 44 (expr)


State 34

   51 call_function: ID LPAREN • args RPAREN

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    $default  reduce using rule 54 (args)

    expr                  go to state 69
    let_in_expr           go to state 23
    call_function         go to state 24
    args                  go to state 70
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 35

   91 destructive_var_decl: ID DESTRUCTOR • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 71
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 36

   49 var: ID • COLON ID EQUALS expr
   50    | ID • EQUALS expr

    COLON   shift, and go to state 72
    EQUALS  shift, and go to state 73


State 37

   46 let_in_expr: LET assignments • IN expr

    IN  shift, and go to state 74


State 38

   47 assignments: var •
   48            | var • COMMA assignments

    COMMA  shift, and go to state 75

    $default  reduce using rule 47 (assignments)


State 39

   68 conditional: IF LPAREN • expr RPAREN expr
   69            | IF LPAREN • expr RPAREN expr elif_part
   70            | IF LPAREN • expr RPAREN expr ELSE expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 76
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 40

   74 while: WHILE LPAREN • expr RPAREN expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 77
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 41

   20 expr: expr • CONCAT expr
   21     | expr • DCONCAT expr
   22     | expr • GE expr
   23     | expr • EQ expr
   24     | expr • GT expr
   25     | expr • LE expr
   26     | expr • LT expr
   27     | expr • AND expr
   28     | expr • OR expr
   29     | expr • NEQUALS expr
   30     | expr • PLUS expr
   31     | expr • MINUS expr
   32     | expr • MULT expr
   33     | expr • DIVIDE expr
   34     | expr • MOD expr
   35     | expr • POWER expr
   36     | LPAREN expr • RPAREN
   88 member_invocation: expr • DOT ID
   89                  | expr • DOT call_function
   90 member_assignment: expr • DOT ID DESTRUCTOR expr

    RPAREN   shift, and go to state 78
    DOT      shift, and go to state 51
    DCONCAT  shift, and go to state 52
    CONCAT   shift, and go to state 53
    AND      shift, and go to state 54
    OR       shift, and go to state 55
    NEQUALS  shift, and go to state 56
    GE       shift, and go to state 57
    GT       shift, and go to state 58
    LE       shift, and go to state 59
    LT       shift, and go to state 60
    EQ       shift, and go to state 61
    PLUS     shift, and go to state 62
    MINUS    shift, and go to state 63
    MULT     shift, and go to state 64
    DIVIDE   shift, and go to state 65
    MOD      shift, and go to state 66
    POWER    shift, and go to state 67


State 42

   38 expr: conditional •

    $default  reduce using rule 38 (expr)


State 43

   39 expr: while •

    $default  reduce using rule 39 (expr)


State 44

   18 expr: block_expr •

    $default  reduce using rule 18 (expr)


State 45

   94 block_expr_list: statement •
   95                | statement • block_expr_list

    NUMBER     shift, and go to state 5
    PI         shift, and go to state 6
    E          shift, and go to state 7
    ID         shift, and go to state 8
    STRING     shift, and go to state 9
    BOOLEAN    shift, and go to state 10
    ERROR      shift, and go to state 11
    LET        shift, and go to state 12
    IF         shift, and go to state 13
    WHILE      shift, and go to state 14
    LPAREN     shift, and go to state 15
    SEMICOLON  shift, and go to state 16
    LBRACKET   shift, and go to state 17
    NEW        shift, and go to state 18
    FUNCTION   shift, and go to state 19
    TYPE       shift, and go to state 20

    RBRACKET  reduce using rule 94 (block_expr_list)
    RBRACKET  [reduce using rule 96 (block_expr_list)]
    $default  reduce using rule 94 (block_expr_list)

    statement             go to state 45
    expr                  go to state 22
    let_in_expr           go to state 23
    call_function         go to state 24
    decl_function         go to state 25
    conditional           go to state 26
    while                 go to state 27
    decl_tpye             go to state 28
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 32
    type_instance         go to state 33
    block_expr_list       go to state 79


State 46

   92 block_expr: LBRACKET block_expr_list • RBRACKET

    RBRACKET  shift, and go to state 80


State 47

   93 type_instance: NEW ID • LPAREN args RPAREN

    LPAREN  shift, and go to state 81


State 48

   57 decl_function: FUNCTION ID • LPAREN list_params RPAREN ARROW expr SEMICOLON
   58              | FUNCTION ID • LPAREN list_params RPAREN block_expr
   59              | FUNCTION ID • LPAREN list_params RPAREN COLON ID ARROW expr SEMICOLON
   60              | FUNCTION ID • LPAREN list_params RPAREN COLON ID block_expr

    LPAREN  shift, and go to state 82


State 49

   75 decl_tpye: TYPE ID • LPAREN list_params RPAREN LBRACKET type_body RBRACKET
   76          | TYPE ID • LBRACKET type_body RBRACKET
   77          | TYPE ID • INHERITS ID LBRACKET type_body RBRACKET
   78          | TYPE ID • LPAREN list_params RPAREN INHERITS ID RPAREN args LPAREN LBRACKET type_body RBRACKET

    LPAREN    shift, and go to state 83
    LBRACKET  shift, and go to state 84
    INHERITS  shift, and go to state 85


State 50

   12 statement: expr SEMICOLON •

    $default  reduce using rule 12 (statement)


State 51

   88 member_invocation: expr DOT • ID
   89                  | expr DOT • call_function
   90 member_assignment: expr DOT • ID DESTRUCTOR expr

    ID  shift, and go to state 86

    call_function  go to state 87


State 52

   21 expr: expr DCONCAT • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 88
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 53

   20 expr: expr CONCAT • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 89
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 54

   27 expr: expr AND • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 90
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 55

   28 expr: expr OR • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 91
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 56

   29 expr: expr NEQUALS • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 92
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 57

   22 expr: expr GE • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 93
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 58

   24 expr: expr GT • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 94
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 59

   25 expr: expr LE • expr

    NUMBER    shift, and go to state 5
    PI        shift, and go to state 6
    E         shift, and go to state 7
    ID        shift, and go to state 8
    STRING    shift, and go to state 9
    BOOLEAN   shift, and go to state 10
    ERROR     shift, and go to state 11
    LET       shift, and go to state 12
    IF        shift, and go to state 13
    WHILE     shift, and go to state 14
    LPAREN    shift, and go to state 15
    LBRACKET  shift, and go to state 17
    NEW       shift, and go to state 18

    expr                  go to state 95
    let_in_expr           go to state 23
    call_function         go to state 24
    conditional           go to state 42
    while                 go to state 43
    member_invocation     go to state 29
    member_assignment     go to state 30
    destructive_var_decl  go to state 31
    block_expr            go to state 44
    type_instance         go to state 33


State 60

   26 expr: expr LT • expr
